--- a/index.html
+++ b/index.html
@@ -64,12 +64,119 @@
           <a href="">Twittear</a>
         </div>
 
-</div>
+      </div>
+
       <div class="Main">
+        <div class="header">
+          <h2>Inicio</h2>
+        </div>
+
+        <div class="publish">
+          <div class="avatar">
+            <img src="img/blue-egg.png" alt="Avatar">
+          </div>
+          <form action="">
+            <input type="text" placeholder="¿Qué está pasando?">
+            <div class="options">
+              <span class="icon-picture"></span>
+              <span class="icon-chart-bar"></span>
+              <span class="icon-smile"></span>
+              <span class="icon-calendar"></span>
+            </div>
+            <input type="submit" value="Twittear">
+          </form>
+        </div>
+
+        <div class="space"></div>
+
+        <div class="tweet">
+
+        </div>
 
       </div>
 
       <div class="Sidebar">
+        <div class="search-bar">
+          <span class="icon-search"></span>
+          <input type="search" placeholder="Buscar en Twitter">
+        </div>
+
+        <div class="card">
+          <div class="card-title">
+            <h5>Qué está pasando</h5>
+          </div>
+
+          <div class="card-section">
+            <div class="section-content">
+              <div class="text">
+                <h6>Celebridades - Anoche</h6>
+                <h5>La actriz de 'Glee', Naya Rivera, problemente se ahogó en un accidente, según la policía</h5>
+              </div>
+              <div class="card-img">
+                <img src="img/naya.jpg" alt="img de apoyo">
+              </div>
+            </div>
+          </div>
+
+          <div class="card-section">
+            <div class="section-content">
+              <div class="text">
+                <h6>Tendencia en Colombia</h6>
+                <h5>#RIPViktorVolkov</h5>
+              </div>
+              <p class="info">4.351 personas están twitteando sobre esto</p>
+            </div>
+          </div>
+
+          <div class="card-section">
+            <div class="section-content">
+              <div class="text">
+                <h6>Champions League - Hace 5 horas</h6>
+                <h5>Así quedaron los cruces de la Champions League</h5>
+              </div>
+              <div class="card-img">
+                <img src="img/champions.jpg" alt="img de apoyo">
+              </div>
+              <p>Tendencias sobre: <a href="">Atalanta</a></p>
+            </div>
+          </div>
+
+          <div class="card-section">
+            <div class="section-content">
+              <div class="text">
+                <h6>Tendencia en Colombia</h6>
+                <h5>#CuarentenaEstricta</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-section card-bottom">
+              <a href="">Mostrar más</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">
+            <h5>A quién seguir</h5>
+          </div>
+
+          <div class="card-section follow">
+
+          </div>
+
+          <div class="card-section card-bottom">
+              <a href="">Mostrar más</a>
+          </div>
+        </div>
+
+        <div class="footer">
+          <a href="">Términos</a>
+          <a href="">Política de privacidad</a>
+          <a href="">Cookies</a>
+          <a href="">Información de anuncios</a>
+          <a href="">Más opciones v</a>
+          <p>&copy; 2020 Twitter, Inc.</p>
+        </div>
 
       </div>
     </div>
