--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
           <form action="">
             <input type="text" placeholder="¿Qué está pasando?">
             <div class="options">
-              <span class="icon-picture"></span>
-              <span class="icon-chart-bar"></span>
-              <span class="icon-smile"></span>
-              <span class="icon-calendar"></span>
+              <a href=""><span class="icon-picture"></span></a>
+              <a href=""><span class="icon-chart-bar"></span></a>
+              <a href=""><span class="icon-smile"></span></a>
+              <a href=""><span class="icon-calendar"></span></a>
             </div>
             <input type="submit" value="Twittear">
           </form>
@@ -90,7 +90,97 @@
         <div class="space"></div>
 
         <div class="tweet">
+          <div class="avatar">
+            <img src="img/red-egg.jpg" alt="Avatar">
+          </div>
 
+          <div class="content">
+            <div class="arroba">
+              <h3>Huevito rojo</h3>
+              <h4>@HuevitoRojo - 5min</h4>
+            </div>
+            <p class="text">Neque <a href="">@porro</a> quisquam est qui <a href="">#dolorem</a> ipsum quia dolor sit amet, consectetur, adipisci velit.</p>
+
+            <div class="actions">
+              <a href="" class="comment"><span class="icon-comment-empty"></span></a>
+              <a href="" class="retweet"><span class="icon-retweet"></span></a>
+              <a href="" class="like"><span class="icon-heart-empty"></span></a>
+              <a href="" class="upload"><span class="icon-upload"></span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="tweet">
+          <div class="avatar">
+            <img src="img/logo-xbox.png" alt="Avatar">
+          </div>
+
+          <div class="content">
+            <div class="arroba">
+              <h3>Xbox Colombia</h3>
+              <h4>@XboxColombia - 10min</h4>
+            </div>
+            <p class="text">Tu cara cuando te das cuenta que solo faltan cuatro días para que Operación 4 llegue a <a href="">#Gears5</a>.</p>
+            <p class="text">Pronto podrás tener completo el escuadrón Delta.</p>
+            <p class="text"><a href="https://www.youtube.com/watch?v=dEzfbXKOzkE">youtube.com/watch?v=dEzfbX...</a></p>
+
+            <div class="media">
+              <img src="img/marcus.jpg" alt="">
+            </div>
+
+            <div class="actions">
+              <a href="" class="comment"><span class="icon-comment-empty"></span></a>
+              <a href="" class="retweet"><span class="icon-retweet"></span></a>
+              <a href="" class="like"><span class="icon-heart-empty"></span></a>
+              <a href="" class="upload"><span class="icon-upload"></span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="tweet">
+          <div class="avatar">
+            <img src="img/fedelobo.jpg" alt="Avatar">
+          </div>
+
+          <div class="content">
+            <div class="arroba">
+              <h3>Fedelobo</h3>
+              <h4>@SoyFedelobo - 12min</h4>
+            </div>
+            <p class="text">What</p>
+
+            <div class="media">
+              <img src="img/fedelobo-post.jpeg" alt="">
+            </div>
+
+            <div class="actions">
+              <a href="" class="comment"><span class="icon-comment-empty"></span></a>
+              <a href="" class="retweet"><span class="icon-retweet"></span></a>
+              <a href="" class="like"><span class="icon-heart-empty"></span></a>
+              <a href="" class="upload"><span class="icon-upload"></span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="tweet">
+          <div class="avatar">
+            <img src="img/yellow-egg.png" alt="Avatar">
+          </div>
+
+          <div class="content">
+            <div class="arroba">
+              <h3>Huevito Amarillo</h3>
+              <h4>@HuevitoAmarillo - 16min</h4>
+            </div>
+            <p class="text">Soy nuevo aquí</p>
+            
+            <div class="actions">
+              <a href="" class="comment"><span class="icon-comment-empty"></span></a>
+              <a href="" class="retweet"><span class="icon-retweet"></span></a>
+              <a href="" class="like"><span class="icon-heart-empty"></span></a>
+              <a href="" class="upload"><span class="icon-upload"></span></a>
+            </div>
+          </div>
         </div>
 
       </div>
